LDEV-2972 remove  sun.misc.BASE64Decoder